corrected small typos and update the README file

--- a/_theme_files/add-job.html
+++ b/_theme_files/add-job.html
@@ -29,7 +29,7 @@
                 alt="React Jobs"
               />
               <span class="hidden md:block text-white text-2xl font-bold ml-2"
-                >React Jobs</span
+                >Job Listings</span
               >
             </a>
             <div class="md:ml-auto">
