--- a/_theme_files/not-found.html
+++ b/_theme_files/not-found.html
@@ -25,7 +25,7 @@
             <a class="flex flex-shrink-0 items-center mr-4" href="/index.html">
               <img class="h-10 w-auto" src="images/logo.png" alt="React Jobs" />
               <span class="hidden md:block text-white text-2xl font-bold ml-2"
-                >React Jobs</span
+                >Job Listings</span
               >
             </a>
             <div class="md:ml-auto">
