--- a/_theme_files/index.html
+++ b/_theme_files/index.html
@@ -29,7 +29,7 @@
                 alt="React Jobs"
               />
               <span class="hidden md:block text-white text-2xl font-bold ml-2"
-                >React Jobs</span
+                >Job Listings</span
               >
             </a>
             <div class="md:ml-auto">
@@ -81,7 +81,7 @@
           <div class="bg-gray-100 p-6 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold">For Developers</h2>
             <p class="mt-2 mb-4">
-              Browse our React jobs and start your career today
+              Browse our Job Listings and start your career today
             </p>
             <a
               href="/jobs.html"
